--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,13 @@
     <!-- Optional.  If excluded, ads will not be cached. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
+        android:name=".GlobalClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".GlobalClass"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -41,9 +40,11 @@
         <activity
             android:name="com.aerserv.sdk.view.ASVastInterstitialActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity android:name="com.aerserv.sdk.view.ASWebviewInterstitialActivity"
+        <activity
+            android:name="com.aerserv.sdk.view.ASWebviewInterstitialActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity android:name="com.aerserv.sdk.view.ASVpaidInterstitalActivity"
+        <activity
+            android:name="com.aerserv.sdk.view.ASVpaidInterstitalActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name="com.aerserv.sdk.view.AerServFullScreenAdActivity"
@@ -53,6 +54,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
+        <activity android:name=".GDPRConsent">
+
+        </activity>
     </application>
 
 </manifest>
