Add basic recycler view with banners to test proof of concept

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".GDPRConsent">
-
-        </activity>
+        <activity android:name=".GDPRConsent"></activity>
     </application>
 
 </manifest>
