--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation files('libs/aerserv-sdk.jar')
+    implementation 'com.google.android.gms:play-services-ads:10.2.1'
+    implementation files('libs/AudienceNetwork.aar')
 }
