Minor cleanup, add support for charles proxy (network security config), remove additional plcs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="vartyr.coffeecounter">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,6 +20,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/coffee_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="n"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
