--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation files('libs/AudienceNetwork.aar')
-
+    implementation files('libs/DTBAndroidSDK-7.3.jar')
 }
