--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation files('libs/aerserv-sdk.jar')
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.google.android.gms:play-services-basement:15.0.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    //    implementation 'com.google.android.gms:play-services-basement:15.0.1'
+    //    implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation files('libs/AudienceNetwork.aar')
     implementation files('libs/DTBAndroidSDK-7.3.jar')
+    implementation files('libs/mopub-sdk-4.18.0.jar')
 }
