--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     implementation files('libs/aerserv-sdk.jar')
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     //    implementation 'com.google.android.gms:play-services-basement:15.0.1'
-    //    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation files('libs/AudienceNetwork.aar')
     implementation files('libs/DTBAndroidSDK-7.3.jar')
     implementation files('libs/mopub-sdk-4.18.0.jar')
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:multidex:1.0.1'
+    implementation files('libs/InMobi-7.0.2.jar')
 }
