--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         android:roundIcon="@mipmap/coffee_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:minSdkVersion="15"
+        android:installLocation="preferExternal"
         tools:targetApi="n">
         <activity android:name=".MainActivity">
             <intent-filter>
