Fixed compilation error, fixed issue with interstitial constantly being cleaned up
To prevent activity from being completely destroyed, you can include             android:configChanges=orientation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation fileTree(include: ['*.jar'], dir: 'libs') // Commented this out to be more selective about what is being included
+    implementation files('libs/aerserv-sdk.jar')
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.android.gms:play-services-basement:15.0.1'
@@ -28,7 +29,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/aerserv-sdk.jar')
     implementation files('libs/AudienceNetwork.aar')
     implementation files('libs/DTBAndroidSDK-7.3.jar')
     implementation files('libs/mopub-sdk-4.18.0.jar')
@@ -38,5 +38,4 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
 }
