--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         </activity>
         <activity
             android:name=".CoffeeIncrementedActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|screenSize">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
