--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:minSdkVersion="15"
         android:installLocation="preferExternal"
         tools:targetApi="n">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +42,8 @@
             android:name=".CoffeeIncrementedActivity"
             android:parentActivityName=".MainActivity"
             android:configChanges="orientation|screenSize">
+
+
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
@@ -89,11 +92,15 @@
             android:theme="@android:style/Theme.NoTitleBar"
             tools:ignore="UnusedAttribute" />
 
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".GDPRConsent" />
+        <!--<activity android:name=".GDPRConsent" />-->
+
+
+
         <activity android:name=".SipAndSwipe"></activity>
     </application>
 
