--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "vartyr.coffeecounter"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -31,7 +32,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/AudienceNetwork.aar')
     implementation files('libs/DTBAndroidSDK-7.3.jar')
-    implementation files('libs/mopub-sdk-4.18.0.jar')
+    // implementation files('libs/mopub-sdk-4.18.0.jar')
+    implementation('com.mopub:mopub-sdk:5.3.0@aar') {
+        transitive = true
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat - does not resolve / has issues
+    }
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation files('libs/InMobi-7.0.2.jar')
