--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        jcenter()// includes the MoPub SDK and AVID library
+        maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
+        maven { url 'https://maven.google.com' } // necessary for Android API 26
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
