--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,14 @@
         android:name=".GlobalClass"
         android:allowBackup="true"
         android:icon="@mipmap/coffee_launcher"
+        android:installLocation="preferExternal"
         android:label="@string/app_name"
+        android:minSdkVersion="15"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/coffee_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:minSdkVersion="15"
-        android:installLocation="preferExternal"
         tools:targetApi="n">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,8 +39,8 @@
         </activity>
         <activity
             android:name=".CoffeeIncrementedActivity"
-            android:parentActivityName=".MainActivity"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
@@ -90,12 +89,12 @@
             android:theme="@android:style/Theme.NoTitleBar"
             tools:ignore="UnusedAttribute" />
 
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".SipAndSwipe"></activity>
+        <activity android:name=".SipAndSwipe" />
+        <activity android:name=".BackGroundBanner"></activity>
     </application>
 
 </manifest>
