--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "vartyr.coffeecounter"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -19,22 +19,25 @@ android {
 }
 
 dependencies {
-//    implementation fileTree(include: ['*.jar'], dir: 'libs') // Commented this out to be more selective about what is being included
-    implementation files('libs/aerserv-sdk.jar')
+    implementation fileTree(include: ['*.aar'], dir: 'libs') // Commented this out to be more selective about what is being included
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation('com.google.android.gms:play-services-plus:15.0.1') // {exclude group: 'com.android.support'}
+
+//    implementation files('libs/aerserv-sdk.jar')
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.google.android.gms:play-services-basement:15.0.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+//    implementation 'com.google.android.gms:play-services-basement:15.0.1'
+//    implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/AudienceNetwork.aar')
-    implementation files('libs/DTBAndroidSDK-7.3.jar')
-    implementation files('libs/mopub-sdk-4.18.0.jar')
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+//    implementation files('libs/AudienceNetwork.aar')
+//    implementation files('libs/DTBAndroidSDK-7.3.jar')
+//    implementation files('libs/mopub-sdk-4.18.0.jar')
+//    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation files('libs/InMobi-7.0.2.jar')
+//    implementation files('libs/InMobi-7.0.2.jar')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
