--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,46 +48,46 @@
                 android:value=".MainActivity" />
         </activity>
         <!-- AerServ -->
-        <activity
-            android:name="com.aerserv.sdk.view.ASVastInterstitialActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.aerserv.sdk.view.ASWebviewInterstitialActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.aerserv.sdk.view.ASVpaidInterstitalActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.aerserv.sdk.view.AerServFullScreenAdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.facebook.ads.AudienceNetworkActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.mopub.mobileads.MoPubActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.mopub.mobileads.MraidActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.mopub.common.MoPubBrowser"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.mopub.mobileads.RewardedMraidActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity
-            android:name="com.inmobi.rendering.InMobiAdActivity"
-            android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize|screenLayout"
-            android:hardwareAccelerated="true"
-            android:resizeableActivity="false"
-            android:theme="@android:style/Theme.NoTitleBar"
-            tools:ignore="UnusedAttribute" />
+        <!--<activity-->
+            <!--android:name="com.aerserv.sdk.view.ASVastInterstitialActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.aerserv.sdk.view.ASWebviewInterstitialActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.aerserv.sdk.view.ASVpaidInterstitalActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.aerserv.sdk.view.AerServFullScreenAdActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.google.android.gms.ads.AdActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.facebook.ads.AudienceNetworkActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.mopub.mobileads.MoPubActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.mopub.mobileads.MraidActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.mopub.common.MoPubBrowser"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.mopub.mobileads.MraidVideoPlayerActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.mopub.mobileads.RewardedMraidActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!--<activity-->
+            <!--android:name="com.inmobi.rendering.InMobiAdActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize|screenLayout"-->
+            <!--android:hardwareAccelerated="true"-->
+            <!--android:resizeableActivity="false"-->
+            <!--android:theme="@android:style/Theme.NoTitleBar"-->
+            <!--tools:ignore="UnusedAttribute" />-->
 
         <meta-data
             android:name="preloaded_fonts"
