--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.aar'], dir: 'libs') // Commented this out to be more selective about what is being included
+    // Unified dependencies
+    implementation(name:'InMobiSDK', ext:'aar')
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation('com.google.android.gms:play-services-plus:15.0.1') {exclude group: 'com.android.support'}
 
+    // Dependencies just for this project
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -36,8 +40,6 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-    // Unified dependencies
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation('com.google.android.gms:play-services-plus:15.0.1') {exclude group: 'com.android.support'}
+
 
 }
