Application cleanup / refactor, move recycler view to it's own activity
Further clean up the app gradle. TODO: check why custom tabs is included.
Remove the tests / junit items since we don't use those
Manifest updates to include new activities
Clean up custom view adapter code, allow us to get plc directly from the constructor
Add a new ref to get the text view and use that instead for the text from the array
Create a new activity for Recycler view and link that up in MainActivity
Update GlobalApp singleton to use the correct test plcs from Zeno
Further clean up for MainActivity to remove any preload functionality / toggles that are no longer being used
Style changes for MainActivity and the new DessertMenuRecycler activity xml
Modifications to the styling for the text line items used by the recycler
String updates to account for new button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,32 +48,34 @@
                 android:value=".MainActivity" />
         </activity>
 
-
         <!-- AdColony Activities -->
-        <!--<activity-->
-            <!--android:name="com.adcolony.sdk.AdColonyInterstitialActivity"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
-            <!--android:hardwareAccelerated="true" />-->
-        <!--<activity-->
-            <!--android:name="com.adcolony.sdk.AdColonyAdViewActivity"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
-            <!--android:hardwareAccelerated="true" />-->
+        <!-- <activity -->
+        <!-- android:name="com.adcolony.sdk.AdColonyInterstitialActivity" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" -->
+        <!-- android:hardwareAccelerated="true" /> -->
+        <!-- <activity -->
+        <!-- android:name="com.adcolony.sdk.AdColonyAdViewActivity" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" -->
+        <!-- android:hardwareAccelerated="true" /> -->
+
 
         <!-- AppLovin Activities -->
-        <!--<activity-->
-            <!--android:name="com.applovin.adview.AppLovinInterstitialActivity"-->
-            <!--android:configChanges="orientation|screenSize" />-->
-        <!--<activity-->
-            <!--android:name="com.applovin.adview.AppLovinConfirmationActivity"-->
-            <!--android:configChanges="orientation|screenSize" />-->
+        <!-- <activity -->
+        <!-- android:name="com.applovin.adview.AppLovinInterstitialActivity" -->
+        <!-- android:configChanges="orientation|screenSize" /> -->
+        <!-- <activity -->
+        <!-- android:name="com.applovin.adview.AppLovinConfirmationActivity" -->
+        <!-- android:configChanges="orientation|screenSize" /> -->
+
 
         <!-- Chartboost Activities -->
-        <!--<activity-->
-            <!--android:name="com.chartboost.sdk.CBImpressionActivity"-->
-            <!--android:excludeFromRecents="true"-->
-            <!--android:hardwareAccelerated="true"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize" />-->
+        <!-- <activity -->
+        <!-- android:name="com.chartboost.sdk.CBImpressionActivity" -->
+        <!-- android:excludeFromRecents="true" -->
+        <!-- android:hardwareAccelerated="true" -->
+        <!-- android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" /> -->
+
 
         <!-- MoPub Activities -->
         <activity
@@ -93,32 +95,40 @@
             android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <!-- Telaria Activities -->
-        <!--<activity-->
-            <!--android:name="com.tremorvideo.sdk.android.videoad.Playvideo"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize"-->
-            <!--android:hardwareAccelerated="false"-->
-            <!--android:exported="false">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="com.tremorvideo.sdk.android.videoad.Playvideo" />-->
+        <!-- <activity -->
+        <!-- android:name="com.tremorvideo.sdk.android.videoad.Playvideo" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize" -->
+        <!-- android:hardwareAccelerated="false" -->
+        <!-- android:exported="false"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="com.tremorvideo.sdk.android.videoad.Playvideo" /> -->
+
 
         <!-- Vungle Activities -->
-        <!--<activity-->
-            <!--android:name="com.vungle.publisher.VideoFullScreenAdActivity"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize"-->
-            <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />-->
-        <!--<activity-->
-            <!--android:name="com.vungle.publisher.MraidFullScreenAdActivity"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />-->
-
-
+        <!-- <activity -->
+        <!-- android:name="com.vungle.publisher.VideoFullScreenAdActivity" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize" -->
+        <!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen" /> -->
+        <!-- <activity -->
+        <!-- android:name="com.vungle.publisher.MraidFullScreenAdActivity" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize" -->
+        <!-- android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" /> -->
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".SipAndSwipe" />
-        <activity android:name=".BackGroundBanner"></activity>
+        <activity android:name=".BackGroundBanner">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".DessertMenuRecycler">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
