--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -19,27 +18,35 @@ android {
 }
 
 dependencies {
-    // Unified dependencies
-    implementation(name:'InMobiSDK', ext:'aar')
+    // Unified dependencies (IM + AerServ)
+    implementation files('libs/InMobiSDK.aar')
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation('com.google.android.gms:play-services-plus:15.0.1') {exclude group: 'com.android.support'}
+    implementation('com.google.android.gms:play-services-plus:15.0.1') {
+        exclude group: 'com.android.support'
+    }
 
-    // Dependencies just for this project
-    implementation 'com.android.support:customtabs:27.1.1'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/AudienceNetwork.aar')
-//    implementation files('libs/DTBAndroidSDK-7.3.jar')
-    implementation files('libs/mopub-sdk-4.18.0.jar')
-    implementation files('libs/mopub-volley-1.1.0.jar')
+    // Application specific
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    // AdMob Mediation
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    // Facebook Audience Network Mediation
+    implementation files('libs/AudienceNetwork.aar')
+
+    // APS Mediation
+    // implementation files('libs/DTBAndroidSDK-7.3.jar')
+
+    // MoPub Mediation
+    implementation files('libs/mopub-sdk-4.18.0.jar')
+    implementation files('libs/mopub-volley-1.1.0.jar')
+
+    // ?? check
+    implementation 'com.android.support:customtabs:27.1.1'
 
 
 }
