Add new activity for supporting application settings view, update general theme
Add seperate activity for viewing application settings (like sdk versions, gdpr)
Enable debug mode on the main activity banner
Add button on Main activity to open application settings
Added more color strings and updated base application color strings to brown/dark brown

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,14 +120,19 @@
 
         <activity android:name=".SipAndSwipe" />
         <activity android:name=".BackGroundBanner">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
         <activity android:name=".DessertMenuRecycler">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".ApplicationSettings">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
