Created new activity for testing simultaneous refresh
CoffeeRadio activity created to test scnearios where we may have 2 banners refresh simultaneously
Initially both banners will be created, causing a potential conflict where the singleton adapters will cause undesired behavior
Currently implemented solution kills the bottom banner on onWindowFocusChanged detection and only shows it after some delay (currently 7000ms / 7s)
Created 2 seperate listeners to clearly ID which one is being utilized at any giuven time
After returning from background, introduced delay will ensure AD_IMPRESSION event does not overlap
Note: the intended solution should allow for pause/play to be run to stop refresh. Currently does not appear to be the case as it appears to be called automatically

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,6 +134,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".CoffeeRadio">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
