--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "vartyr.coffeecounter"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -26,17 +26,19 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    // Application specific
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+
+    implementation 'com.android.support:support-compat:28.0.0'
 
     // AdMob Mediation
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    // implementation 'com.google.android.gms:play-services-ads:15.0.1'
 //    implementation 'com.google.android.gms:play-services-basement:15.0.1'
 //    implementation 'com.google.android.gms:play-services-location:15.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Facebook Audience Network Mediation
 //    implementation files('libs/AudienceNetwork.aar')
@@ -45,11 +47,8 @@ dependencies {
     // implementation files('libs/DTBAndroidSDK-7.3.jar'
 
     // MoPub Mediation
-    implementation files('libs/mopub-sdk-4.18.0.jar')
-    implementation files('libs/mopub-volley-1.1.0.jar')
-
-    // ?? check
-    //implementation 'com.android.support:customtabs:27.1.1'
+//    implementation files('libs/mopub-sdk-4.18.0.jar')
+//    implementation files('libs/mopub-volley-1.1.0.jar')
 
 
 }
