--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,8 @@
 
 
     <application
-        android:name=".AdManager"
         android:allowBackup="false"
         android:icon="@mipmap/coffee_launcher"
-        android:installLocation="preferExternal"
         android:minSdkVersion="16"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/coffee_launcher_round"
@@ -34,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PreloadInterstitialActivity"
+            android:name=".basictests.PreloadInterstitialActivity"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".MainActivity">
         </activity>
@@ -91,12 +89,12 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".InjectedBannerActivity">
+        <activity android:name=".basictests.InjectedBannerActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".recycler.DessertMenuRecycler">
+        <activity android:name=".advancedtests.DessertMenuRecycler">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -106,7 +104,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".SampleRadioActivity">
+        <activity android:name=".advancedtests.SampleRadioActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
